# Repo2xml

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  build.spec  justfile  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  github-release.yml  lint-format.yml  publish-pypi.yml  release-pyinstaller.yml  sphinx-api.yml  tests.yml  typecheck.yml
.justfiles/: clean.just  github_actions.just  license.just  prek.just
docs/: index.md  python-api.md
docs_sphinx/: api.rst  conf.py  index.rst
src/repo2xml/: __init__.py  __main__.py  _bundler.py  bundler.py
src/repo2xml/tests/: conftest.py  test_bundler.py  test_main.py  test_smoke.py
typings/lazi/conf/: conf.pyi
typings/lazi/core/: finder.pyi  loader.pyi  module.pyi  spec.pyi  stat.pyi
typings/lazi/util/: __init__.pyi  debug.pyi  functional.pyi  util.pyi
