[project]
name = "repo2xml"
version = "2026.4.13.1"
description = "Bundle a repository into a single XML file for LLMs."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "rbroderi", email = "rbroderi@gmail.com" }]
requires-python = ">=3.13"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "alive-progress>=3.3.0",
  "beartype>=0.22.9",
  "identify>=2.6.18",
  "lazi>=1.9.161",
  "magika>=0.6.3",
  "markitdown[all]>=0.1.5",
  "pathspec>=0.12.1",
  "puremagic>=2.2.0",
]

[project.scripts]
repo2xml = "repo2xml.__main__:main"

[project.optional-dependencies]
dev = [
  "pip-audit>=2.10.0",
  "prek>=0.3.8",
  "pyinstaller>=6.19.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-sugar>=1.1.1",
  "rust-just>=1.49.0",
]
docs = ["sphinx>=8.2.3", "sphinx-autobuild>=2024.10.3", "zensical>=0.0.32"]

[build-system]
requires = ["uv_build>=0.11.6"]
build-backend = "uv_build"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["src", "src/repo2xml/tests"]
pythonVersion = "3.13"
reportUnusedCallResult = "none"
reportAny = "none"
reportExplicitAny = "none"
reportImplicitStringConcatenation = "none"
reportUnusedFunction = "none"
reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"

[tool.ruff]
line-length = 120
target-version = "py313"


[tool.ruff.lint.isort]
force-single-line = true

[tool.coverage.run]
source = ["src/repo2xml"]
omit = ["src/repo2xml/tests/*"]

[tool.ty.src]
exclude = ["typings"]

[tool.typos.default.extend-words]
datas = "datas"
